--- a/modal.css
+++ b/modal.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
 :root {
   --font-default: "DM Sans", Arial, Helvetica, sans-serif;
   --font-slab: var(--font-default);
@@ -509,12 +510,15 @@ footer {
   .topnav.responsive .icon {
     position: absolute;
     right: 0;
-    top: 0;
+    top: 20px;
   }
   .topnav.responsive a {
     float: none;
     display: block;
     text-align: left;
+  }
+  .topnav.responsive .icon i {
+    color: white;
   }
 }
 
@@ -539,7 +543,88 @@ footer {
     background-color: white;
     margin-right: 20px;
   }
-  .topnav a.icon {
-    margin-top: 0;
-  }
 } 
+
+@media screen and (max-width: 375px) {
+  .header-logo img {
+    width: 100px;
+  }
+  .topnav a.icon {
+    color: #FF001B;
+  }
+  .hero-content {
+    padding: 0;
+  }
+  .hero-headline {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 40px;
+    line-height: 52px;
+  }
+  main {
+    padding: 0;
+    margin-bottom: 0;
+  }
+  .hero-text {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 13px;
+    line-height: 17px;
+    margin-top: 17px;
+  }
+  .hero-section > .btn-signup {
+    padding: 6px 31px;
+  }
+  .hero-section {
+    min-height: 0;
+  }
+  .copyrights {
+    margin-top: 0;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 10px;
+    line-height: 12px;
+  }
+  .modal-btn {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    text-align: center;
+  }
+  .formData label, .text-label {
+    font-size: 14px;
+  }
+  .btn-submit {
+    font-family: 'DM Sans';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 18px;
+    padding: 6px 35px;
+  }
+  .checkbox2-label {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+  }
+  .checkbox-label {
+    margin-left: 30px;
+  }
+  .topnav {
+    z-index: 999;
+  }
+  .content {
+    padding-bottom: 25px;
+  }
+  .bground {
+    top: 53px;
+    background-color: white
+    ;
+  }
+}
